--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "belajar-nodejs-restfulapi",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/main.js",
   "scripts": {
     "test": "jest"
   },
